--- a/config/ranger/rc.conf
+++ b/config/ranger/rc.conf
@@ -617,3 +617,7 @@ map cw eval fm.execute_console("bulkrename") if fm.thisdir.marked_items else fm.
 map f console scout -ftsea%space
 # Always fork when using open_with
 map r chain draw_possible_programs; console -p10 open_with f<Paste>
+
+# a plugin that adds file glyphs / icon support to Ranger:
+# https://github.com/alexanderjeurissen/ranger_devicons
+default_linemode devicons
