--- a/config/mpv/mpv.conf
+++ b/config/mpv/mpv.conf
@@ -11,7 +11,7 @@ geometry=50%:50%                        # Window geometry (default:50%:50%)
 cursor-autohide-fs-only                 # don't autohide the cursor in window mode, only fullscreen
 input-media-keys=no                     # enable/disable OSX media keys
 cursor-autohide=5000                    # autohide the curser after 1s
-ontop=yes                                # always on top enable when open
+ontop=no                                # never on top enable when open
 snap-window=yes
 prefetch-playlist=yes
 force-seekable=yes                      # Flag (default: no)
