--- a/config/ranger/rc.conf
+++ b/config/ranger/rc.conf
@@ -618,6 +618,8 @@ map f console scout -ftsea%space
 # Always fork when using open_with
 map r chain draw_possible_programs; console -p10 open_with f<Paste>
 
+map cz console z%space
+
 # a plugin that adds file glyphs / icon support to Ranger:
 # https://github.com/alexanderjeurissen/ranger_devicons
 default_linemode devicons
