Added pyenv setup and z to ranger

--- a/config/ranger/rc.conf
+++ b/config/ranger/rc.conf
@@ -618,8 +618,11 @@ map f console scout -ftsea%space
 # Always fork when using open_with
 map r chain draw_possible_programs; console -p10 open_with f<Paste>
 
+# Jump to directory
 map cz console z%space
 
+map <C-f> fzf_select
+map <C-l> fzf_locate
 # a plugin that adds file glyphs / icon support to Ranger:
 # https://github.com/alexanderjeurissen/ranger_devicons
 default_linemode devicons
