--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -183,55 +183,55 @@ font:
 # custom_cursor_colors: true
 
 colors:
-  # COLORSCHEME: dracula.yaml
+  # COLORSCHEME: solarized_dark.yaml
   # Default colors
   primary:
     # hard contrast: background = '0x1d2021'
-    background: "0x282a36"
-    foreground: "0xf8f8f2"
+    background: '0x002b36'
+    foreground: '0x839496'
 
   # Normal colors
   normal:
-    black: "0x000000"
-    red: "0xff5555"
-    green: "0x50fa7b"
-    yellow: "0xf1fa8c"
-    blue: "0xbd93f9"
-    magenta: "0xff79c6"
-    cyan: "0x8be9fd"
-    white: "0xbbbbbb"
+    black: '0x073642'
+    red: '0xdc322f'
+    green: '0x859900'
+    yellow: '0xb58900'
+    blue: '0x268bd2'
+    magenta: '0xd33682'
+    cyan: '0x2aa198'
+    white: '0xeee8d5'
 
   # Bright colors
   bright:
-    black: "0x555555"
-    red: "0xff5555"
-    green: "0x50fa7b"
-    yellow: "0xf1fa8c"
-    blue: "0xcaa9fa"
-    magenta: "0xff79c6"
-    cyan: "0x8be9fd"
-    white: "0xffffff"
+    black: '0x002b36'
+    red: '0xcb4b16'
+    green: '0x586e75'
+    yellow: '0x657b83'
+    blue: '0x839496'
+    magenta: '0x6c71c4'
+    cyan: '0x93a1a1'
+    white: '0xfdf6e3'
   cursor:
-    text: "0xffffff"
-    cursor: "0x4d4d4c"
+    text: '0xffffff'
+    cursor: '0x4d4d4c'
 
   # Normal colors
   dim:
-    black: "0x232323"
-    red: "0x74423f"
-    green: "0x5e6547"
-    yellow: "0x8b7653"
-    blue: "0x556b79"
-    magenta: "0x6e4962"
-    cyan: "0x5c8482"
-    white: "0x828282"
+    black: '0x232323'
+    red: '0x74423f'
+    green: '0x5e6547'
+    yellow: '0x8b7653'
+    blue: '0x556b79'
+    magenta: '0x6e4962'
+    cyan: '0x5c8482'
+    white: '0x828282'
   indexed_colors:
-    - { index: 16, color: "0xaf3a03" }
-    - { index: 17, color: "0xd65d0e" }
-    - { index: 18, color: "0xebdbb2" }
-    - { index: 19, color: "0xd5c4a1" }
-    - { index: 20, color: "0x665c54" }
-    - { index: 21, color: "0x3c3836" }
+    - {index: 16, color: '0xaf3a03'}
+    - {index: 17, color: '0xd65d0e'}
+    - {index: 18, color: '0xebdbb2'}
+    - {index: 19, color: '0xd5c4a1'}
+    - {index: 20, color: '0x665c54'}
+    - {index: 21, color: '0x3c3836'}
 
 # Key bindings
 #
@@ -327,26 +327,26 @@ colors:
 #   - AppKeypad
 #
 key_bindings:
-  - { key: V, mods: Alt, action: Paste }
-  - { key: C, mods: Alt, action: Copy }
-  - { key: Insert, mods: Shift, action: PasteSelection }
-  - { key: Key0, mods: Control, action: ResetFontSize }
-  - { key: Plus, mods: Control, action: IncreaseFontSize }
-  - { key: Minus, mods: Control, action: DecreaseFontSize }
-  - { key: L, mods: Control, action: ClearLogNotice }
-  - { key: L, mods: Control, chars: "\f" }
-  - { key: Home, mods: Shift, action: ScrollToTop, mode: ~Alt }
-  - { key: End, mods: Shift, action: ScrollToBottom, mode: ~Alt }
-  - { key: PageUp, mods: Shift, action: ScrollPageUp, mode: ~Alt }
-  - { key: PageDown, mods: Shift, action: ScrollPageDown, mode: ~Alt }
+  - {key: V, mods: Alt, action: Paste}
+  - {key: C, mods: Alt, action: Copy}
+  - {key: Insert, mods: Shift, action: PasteSelection}
+  - {key: Key0, mods: Control, action: ResetFontSize}
+  - {key: Plus, mods: Control, action: IncreaseFontSize}
+  - {key: Minus, mods: Control, action: DecreaseFontSize}
+  - {key: L, mods: Control, action: ClearLogNotice}
+  - {key: L, mods: Control, chars: "\f"}
+  - {key: Home, mods: Shift, action: ScrollToTop, mode: ~Alt}
+  - {key: End, mods: Shift, action: ScrollToBottom, mode: ~Alt}
+  - {key: PageUp, mods: Shift, action: ScrollPageUp, mode: ~Alt}
+  - {key: PageDown, mods: Shift, action: ScrollPageDown, mode: ~Alt}
 mouse:
   # Click settings
   #
   # The `double_click` and `triple_click` settings control the time
   # alacritty should wait for accepting multiple clicks as one double
   # or triple click.
-  double_click: { threshold: 300 }
-  triple_click: { threshold: 300 }
+  double_click: {threshold: 300}
+  triple_click: {threshold: 300}
 
   # If this is `true`, the cursor is temporarily hidden when typing.
   hide_when_typing: true
@@ -371,7 +371,7 @@ mouse:
   # modifiers: Control|Shift
 
 selection:
-  semantic_escape_chars: ',│`|:"'' ()[]{}<>'
+  semantic_escape_chars: ",│`|:\"' ()[]{}<>"
 
   # When set to `true`, selected text will be copied to the primary clipboard.
   save_to_clipboard: true
@@ -392,7 +392,7 @@ selection:
 # All available `mods` and `action` values are documented in the key binding
 # section.
 mouse_bindings:
-  - { mouse: Middle, action: PasteSelection }
+  - {mouse: Middle, action: PasteSelection}
 
 cursor:
   # Cursor style
