Added touchpad setting modified other config

--- a/tag-linux-gui/config/polybar/config
+++ b/tag-linux-gui/config/polybar/config
@@ -89,7 +89,7 @@ bar-volume-empty-foreground = #3e4452
 type = internal/network
 format-connected-foreground = #98c379
 format-disconnected-foreground = #98c379
-interface = wlp3s0
+interface = wlp0s20f3
 interval = 4
 label-connected = %essid%
 label-disconnected = Disconnected
