--- a/tag-linux-gui/config/i3/config
+++ b/tag-linux-gui/config/i3/config
@@ -2,7 +2,7 @@
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
 
 # Set mod key (Mod1=<Alt>, Mod4=<Super>)
-set $mod Mod1
+set $mod Mod4
 
 # set default desktop layout (default is tiling)
 # workspace_layout tabbed <stacking|tabbed>
@@ -22,13 +22,13 @@ bindsym $mod+n border normal
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 # font xft:URWGothic-Book 11
-font pango:Hasklug Nerd Font Mono 11
+font pango:Hack Nerd Font Mono 11
 
 # Use Mouse+$mod to drag floating windows
 floating_modifier $mod
 
 # start a terminal
-set $terminal termite
+set $terminal alacritty
 bindsym $mod+Return exec $terminal
 
 # kill focused window
@@ -60,7 +60,7 @@ bindsym $mod+Ctrl+m exec pavucontrol
 # Start Applications
 bindsym $mod+Ctrl+s exec terminal -e 'bmenu'
 bindsym $mod+F1 exec firefox
-bindsym $mod+F2 exec pcmanfm
+bindsym $mod+F2 exec thunar
 bindsym $mod+t exec --no-startup-id pkill compton
 bindsym $mod+Ctrl+t exec --no-startup-id compton -b
 bindsym $mod+Shift+d --release exec "killall dunst; exec notify-send 'restart dunst'"
@@ -286,11 +286,11 @@ exec --no-startup-id nm-applet
 exec --no-startup-id xfce4-power-manager
 exec --no-startup-id pamac-tray
 exec --no-startup-id clipit
-exec --no-startup-id sxhkd
-exec --no-startup-id /usr/lib/kdeconnectd
+# exec --no-startup-id sxhkd
+# exec --no-startup-id /usr/lib/kdeconnectd
 # exec --no-startup-id kdeconnect-indicator
-exec --no-startup-id keepassxc
-exec --no-startup-id $HOME/workspace/git.rootknecht.net/scripts/fzf-nova/_keyboard.sh
+# exec --no-startup-id keepassxc
+# exec --no-startup-id $HOME/workspace/git.rootknecht.net/scripts/fzf-nova/_keyboard.sh
 exec --no-startup-id blueman-applet
 exec_always --no-startup-id sbxkb
 # exec --no-startup-id start_conky_maia
@@ -337,7 +337,7 @@ bar {
 	position bottom
 
 ## please set your primary output first. Example: 'xrandr --output eDP1 --primary'
-#	tray_output primary
+	tray_output primary
 #	tray_output eDP1
 
 	bindsym button4 nop
