--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -327,18 +327,62 @@ colors:
 #   - AppKeypad
 #
 key_bindings:
-  - {key: P, mods: Control, action: Paste}
-  - {key: Y, mods: Control, action: Copy}
-  - {key: Insert, mods: Shift, action: PasteSelection}
-  - {key: Key0, mods: Control, action: ResetFontSize}
-  - {key: Plus, mods: Control, action: IncreaseFontSize}
-  - {key: Minus, mods: Control, action: DecreaseFontSize}
-  - {key: L, mods: Control, action: ClearLogNotice}
-  - {key: L, mods: Control, chars: "\f"}
-  - {key: Home, mods: Shift, action: ScrollToTop, mode: ~Alt}
-  - {key: End, mods: Shift, action: ScrollToBottom, mode: ~Alt}
-  - {key: PageUp, mods: Shift, action: ScrollPageUp, mode: ~Alt}
-  - {key: PageDown, mods: Shift, action: ScrollPageDown, mode: ~Alt}
+  - { key: P,      mods: Control,                 action: Paste                   }
+  - { key: Y,      mods: Control,                 action: Copy                    }
+  - { key: Insert, mods: Shift,                   action: PasteSelection          }
+  - { key: Key0,   mods: Control,                 action: ResetFontSize           }
+  - { key: Plus,   mods: Control,                 action: IncreaseFontSize        }
+  - { key: Equals, mods: Control,                 action: IncreaseFontSize        }
+  - { key: Minus,  mods: Control,                 action: DecreaseFontSize        }
+  # Vi Mode
+  - { key: Space,  mods: Control,       mode: Vi, action: ScrollToBottom          }
+  - { key: Space,  mods: Control,                 action: ToggleViMode            }
+  - { key: I,                           mode: Vi, action: ScrollToBottom          }
+  - { key: I,                           mode: Vi, action: ToggleViMode            }
+  - { key: C,      mods: Control,       mode: Vi, action: ScrollToBottom          }
+  - { key: C,      mods: Control,       mode: Vi, action: ToggleViMode            }
+  - { key: Escape,                      mode: Vi, action: ClearSelection          }
+  - { key: Y,      mods: Control,       mode: Vi, action: ScrollLineUp            }
+  - { key: E,      mods: Control,       mode: Vi, action: ScrollLineDown          }
+  - { key: G,                           mode: Vi, action: ScrollToTop             }
+  - { key: G,      mods: Shift,         mode: Vi, action: ScrollToBottom          }
+  - { key: B,      mods: Control,       mode: Vi, action: ScrollPageUp            }
+  - { key: F,      mods: Control,       mode: Vi, action: ScrollPageDown          }
+  - { key: U,      mods: Control,       mode: Vi, action: ScrollHalfPageUp        }
+  - { key: D,      mods: Control,       mode: Vi, action: ScrollHalfPageDown      }
+  - { key: Y,                           mode: Vi, action: Copy                    }
+  - { key: Y,                           mode: Vi, action: ClearSelection          }
+  - { key: V,                           mode: Vi, action: ToggleNormalSelection   }
+  - { key: V,      mods: Shift,         mode: Vi, action: ToggleLineSelection     }
+  - { key: V,      mods: Control,       mode: Vi, action: ToggleBlockSelection    }
+  - { key: V,      mods: Alt,           mode: Vi, action: ToggleSemanticSelection }
+  - { key: Return,                      mode: Vi, action: Open                    }
+  - { key: K,                           mode: Vi, action: Up                      }
+  - { key: J,                           mode: Vi, action: Down                    }
+  - { key: H,                           mode: Vi, action: Left                    }
+  - { key: L,                           mode: Vi, action: Right                   }
+  - { key: Up,                          mode: Vi, action: Up                      }
+  - { key: Down,                        mode: Vi, action: Down                    }
+  - { key: Left,                        mode: Vi, action: Left                    }
+  - { key: Right,                       mode: Vi, action: Right                   }
+  - { key: Key0,                        mode: Vi, action: First                   }
+  - { key: Key4,            mode: Vi, action: Last                    }
+  - { key: Key6,   mods: Shift,         mode: Vi, action: FirstOccupied           }
+  - { key: H,      mods: Shift,         mode: Vi, action: High                    }
+  - { key: M,      mods: Shift,         mode: Vi, action: Middle                  }
+  - { key: L,      mods: Shift,         mode: Vi, action: Low                     }
+  - { key: B,                           mode: Vi, action: SemanticLeft            }
+  - { key: W,                           mode: Vi, action: SemanticRight           }
+  - { key: E,                           mode: Vi, action: SemanticRightEnd        }
+  - { key: B,      mods: Shift,         mode: Vi, action: WordLeft                }
+  - { key: W,      mods: Shift,         mode: Vi, action: WordRight               }
+  - { key: E,      mods: Shift,         mode: Vi, action: WordRightEnd            }
+  - { key: Key5,   mods: Shift,         mode: Vi, action: Bracket                 }
+  - { key: Slash,                       mode: Vi, action: SearchForward           }
+  - { key: Slash,  mods: Shift,         mode: Vi, action: SearchBackward          }
+  - { key: N,                           mode: Vi, action: SearchNext              }
+  - { key: N,      mods: Shift,         mode: Vi, action: SearchPrevious          }
+
 mouse:
   # Click settings
   #
@@ -437,7 +481,7 @@ debug:
   #   - Info
   #   - Debug
   #   - Trace
-  log_level: OFF
+  log_level: Warn
 
   # Print all received window events.
   print_events: false
