Doing away with toggling mouse in tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -5,7 +5,16 @@ bind-key C-a send-prefix
 set -g base-index 1           # start windows numbering at 1
 setw -g pane-base-index 1     # make pane numbering consistent with windows
 
-bind m set -gF mouse "#{?mouse,off,on}" # Toggle mouse on/off
+# Enable the mouse for scrolling
+set -gq mode-mouse on # Tmux < 2.1
+set -gq mouse on      # Tmux >= 2.1
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+bind -n WheelDownPane select-pane -t= \; send-keys -M
+
+# Enable mouse for selecting and resizing
+set -gq mouse-select-window on # Tmux < 2.1
+set -gq mouse-select-pane on   # Tmux < 2.1
+set -gq mouse-resize-pane on   # Tmux < 2.1
 
 setw -g automatic-rename on   # rename window to reflect current program
 set -g renumber-windows on    # renumber windows when a window is closed
