--- a/tmux.conf
+++ b/tmux.conf
@@ -19,8 +19,15 @@ set -gq mouse-resize-pane on   # Tmux < 2.1
 setw -g automatic-rename on   # rename window to reflect current program
 set -g renumber-windows on    # renumber windows when a window is closed
 
-set -g default-terminal xterm-256color
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+set -g default-terminal "screen-256color"
+
+# Allow xterm titles in terminal window, terminal scrolling with scrollbar, and setting overrides of C-Up, C-Down, C-Left, C-Right
+set -g terminal-overrides "xterm*:XT:smcup@:rmcup@:kUP5=\eOA:kDN5=\eOB:kLFT5=\eOD:kRIT5=\eOC"
+
+# Set ability to capture on start and restore on exit window data when running an application
+setw -g alternate-screen on
+
+
 set-option -g status-position bottom
 set -g status-keys vi
 set -g history-limit 10000
@@ -92,8 +99,10 @@ bind S choose-session
 bind Tab last-window
 
 # Split window
-bind-key v split-window -h -c "#{pane_current_path}"
-bind-key s split-window -v -c "#{pane_current_path}"
+# setup | and - for window splitting
+unbind %
+bind | split-window -h
+bind - split-window -v
 
 # pane resizing
 bind -r H resize-pane -L 6
@@ -109,7 +118,6 @@ bind -r l select-pane -R  # move right
 bind > swap-pane -D       # swap current pane with the next one
 bind < swap-pane -U       # swap current pane with the previous one
 set -g display-panes-time 2000
-set -g pane-base-index 1
 
 # Use Alt-arrow keys without prefix key to switch panes
 bind -n M-Left select-pane -L
@@ -121,8 +129,10 @@ bind -n M-Down select-pane -D
 bind -n M-p previous-window
 bind -n M-n next-window
 
-set -sg escape-time 0 # No delay for escape key press
+set -sg escape-time 50 # No delay for escape key press
 set -sg repeat-time 300 # increase repeat timeout
+
+
 
 # Reload tmux config
 bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
