Removed border from mpv

--- a/config/mpv/mpv.conf
+++ b/config/mpv/mpv.conf
@@ -4,7 +4,7 @@
 
 # player / window configuration
 # -----------------------------
-border=yes                              # Border at startup (default:yes)
+border=no                              # Border at startup (default:yes)
 autofit-larger=90%x82%                  # resize window in case it's larger than W%xH% of the screen 100%x95%
 autofit-smaller=65%x65%                 # resize window in case it's smaller
 geometry=50%:50%                        # Window geometry (default:50%:50%)
