Added more options to mpv

--- a/config/mpv/mpv.conf
+++ b/config/mpv/mpv.conf
@@ -19,7 +19,8 @@ framedrop=no
 fullscreen=yes                          # Full screen by default
 # no-window-dragging                    # use for gestures.lua
 # fit-border=yes
-
+stop-screensaver=yes                    # Stop screensaver (xautolock)
+audio-display=no                        # Do not display audio file images
 
 # screensot configuration
 # -----------------------
@@ -56,7 +57,7 @@ osd-align-x=left #left|center|right
 osd-align-y=top #top|center|bottom
 osd-status-msg=${time-pos} / ${duration} ${?percent-pos:(${percent-pos}%)}${?frame-drop-count:${!frame-drop-count==0:　Dropped: ${frame-drop-count}}}${?chapter: \n Chapter: ${chapter}}
 # osd-playing-msg =${?playlist-pos:　[${playlist-pos-1}/${playlist-count}] ▶ ${filename} ~ [${width}x${height}] \n\n${?chapter:Chapter: ${chapter}}
-
+term-osd-bar                            # Show progress bar for audio files
 
 # osd bar configuration
 # ---------------------
@@ -79,7 +80,7 @@ osc=yes
 
 # sub configuration
 # -----------------
-slang=eng,spn                           # automatically select these subtitles (decreasing priority)
+slang=eng                              # automatically select these subtitles (decreasing priority)
 sub=auto                                 # enable subtitle when open
 sub-font="SamsungOne-400"               # fonts directo (../mpv/fonts)
 sub-font-size=32
@@ -107,7 +108,7 @@ title=mpv.snad ~ ${?filename:[${playlist-pos-1}/${playlist-count}] ${time-pos} /
 
 # audio
 # -----
-alang=eng,spn                           # automatically select these audio tracks (decreasing priority)
+alang=eng                               # automatically select these audio tracks (decreasing priority)
 audio-file-auto=fuzzy                   # external audio doesn't has to match the file name exactly to autoload
 audio-pitch-correction=yes              # automatically insert scaletempo when playing with higher speed
 volume-max=150                          # maximum volume in %, everything above 100 results in amplification
@@ -183,3 +184,6 @@ hwdec=vaapi
 ytdl-format="bestvideo[height<=?1080]+bestaudio/best"
 # Use yt-dlp
 script-opts=ytdl_hook-ytdl_path=/usr/bin/yt-dlp
+
+[extension.gif]
+loop-file=yes               # Loop gifs
