--- a/tmux.conf
+++ b/tmux.conf
@@ -70,7 +70,8 @@ run -b 'tmux bind -T copy-mode-vi v send -X begin-selection 2> /dev/null || true
 run -b 'tmux bind -t vi-copy C-v rectangle-toggle 2> /dev/null || true'
 run -b 'tmux bind -T copy-mode-vi C-v send -X rectangle-toggle 2> /dev/null || true'
 run -b 'tmux bind -t vi-copy y copy-selection 2> /dev/null || true'
-run -b 'tmux bind -T copy-mode-vi y send -X copy-selection-and-cancel 2> /dev/null || true'
+# run -b 'tmux bind -T copy-mode-vi y send -X copy-selection-and-cancel 2> /dev/null || true'
+run -b 'tmux bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "cat > /tmp/clipboard"'
 run -b 'tmux bind -t vi-copy Escape cancel 2> /dev/null || true'
 run -b 'tmux bind -T copy-mode-vi Escape send -X cancel 2> /dev/null || true'
 run -b 'tmux bind -t vi-copy H start-of-line 2> /dev/null || true'
