--- a/tmux.conf
+++ b/tmux.conf
@@ -5,9 +5,26 @@ bind-key C-a send-prefix
 set -g base-index 1           # start windows numbering at 1
 setw -g pane-base-index 1     # make pane numbering consistent with windows
 
+# Search for shipment tracking numbers (UPS, USPS, FedEx).
+set -g @copycat_search_C-t '(1Z ?[0-9A-Z]{3} ?[0-9A-Z]{3} ?[0-9A-Z]{2} ?[0-9A-Z]{4} ?[0-9A-Z]{3} ?[0-9A-Z]|[\dT]\d\d\d ?\d\d\d\d ?\d\d\d)|E\D{1}\d{9}\D{2}$|9[0-9]{15,21}|[0-9]{15}'
+
+##########
+# Plugin #
+##########
+
+# Install plugins
+set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'tmux-plugins/tmux-pain-control'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'fszymanski/tmux-urlscan'
+
+# Initialize TPM
+run '~/.tmux/plugins/tpm/tpm'
+
+
+
 # Enable the mouse for scrolling
-set -gq mode-mouse on # Tmux < 2.1
-set -gq mouse on      # Tmux >= 2.1
+set -g mouse on
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
 bind -n WheelDownPane select-pane -t= \; send-keys -M
 
@@ -38,52 +55,15 @@ set-option -g focus-events on
 
 setw -g mode-keys vi
 setw -g monitor-activity on
-
-setw -g window-status-separator ''
-set -g status "on"
-set -g status-left-length "100"
-set -g status-right-length "100"
-set -g status-justify 'centre'
-setw -g window-status-separator ""
-set -g status-left-style NONE
-set -g status-right-style NONE
-
-# Style: nightfox
-set -g mode-style "fg=#719cd6,bg=#3b4261"
-set -g message-style "fg=#719cd6,bg=#3b4261"
-set -g message-command-style "fg=#719cd6,bg=#3b4261"
-set -g pane-border-style "fg=#3b4261"
-set -g pane-active-border-style "fg=#719cd6"
-set -g status-style "fg=#719cd6,bg=#131A24"
-set -g status-left "#[fg=#141C26,bg=#719cd6,bold] #S #[fg=#719cd6,bg=#131A24,nobold,nounderscore,noitalics] #[fg=#719cd6,bg=#131A24]#(uptime  | cut -d ' ' -f 1,2,3 | awk '{print $1}')"
-set -g status-right "#[fg=#131A24,bg=#131A24,nobold,nounderscore,noitalics]#[fg=#719cd6,bg=#131A24] #{prefix_highlight} #[fg=#3b4261,bg=#131A24,nobold,nounderscore,noitalics]#[fg=#719cd6,bg=#3b4261] %Y-%m-%d  %H:%M %p #[fg=#719cd6,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#141C26,bg=#719cd6,bold] #{cpu_percentage} #{ram_percentage} #{battery_color_bg} #{battery_percentage}"
-setw -g window-status-activity-style "underscore,fg=#A4A5A6,bg=#131A24"
-setw -g window-status-style "NONE,fg=#A4A5A6,bg=#131A24"
-setw -g window-status-format "#[fg=#131A24,bg=#131A24,nobold,nounderscore,noitalics]#[default] #I  #W #F #[fg=#131A24,bg=#131A24,nobold,nounderscore,noitalics]"
-setw -g window-status-current-format "#[fg=#131A24,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#719cd6,bg=#3b4261,bold] #I  #W #F #[fg=#3b4261,bg=#131A24,nobold,nounderscore,noitalics]"
-
+set -g visual-activity off
 
 # copy mode
-bind Enter copy-mode # enter copy mode
-run -b 'tmux bind -t vi-copy v begin-selection 2> /dev/null || true'
-run -b 'tmux bind -T copy-mode-vi v send -X begin-selection 2> /dev/null || true'
-run -b 'tmux bind -t vi-copy C-v rectangle-toggle 2> /dev/null || true'
-run -b 'tmux bind -T copy-mode-vi C-v send -X rectangle-toggle 2> /dev/null || true'
-run -b 'tmux bind -t vi-copy y copy-selection 2> /dev/null || true'
-# run -b 'tmux bind -T copy-mode-vi y send -X copy-selection-and-cancel 2> /dev/null || true'
-run -b 'tmux bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "cat > /tmp/clipboard"'
-run -b 'tmux bind -t vi-copy Escape cancel 2> /dev/null || true'
-run -b 'tmux bind -T copy-mode-vi Escape send -X cancel 2> /dev/null || true'
-run -b 'tmux bind -t vi-copy H start-of-line 2> /dev/null || true'
-run -b 'tmux bind -T copy-mode-vi H send -X start-of-line 2> /dev/null || true'
-run -b 'tmux bind -t vi-copy L end-of-line 2> /dev/null || true'
-run -b 'tmux bind -T copy-mode-vi L send -X end-of-line 2> /dev/null || true'
-# copy to X11 clipboard
-if -b 'command -v xsel > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | xsel -i -b"'
-if -b '! command -v xsel > /dev/null 2>&1 && command -v xclip > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | xclip -i -selection clipboard >/dev/null 2>&1"'
-# WSL
-if-shell -b 'test -n "$WSLENV"' 'bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel clip.exe'
-if-shell -b 'test -n "$WSLENV"' 'bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel clip.exe'
+bind-key ESCAPE copy-mode # enter copy mode
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-selection
+
+# Copy to system clipboard
+bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "xclip -selection clipboard"
 
 # buffers
 bind b list-buffers  # list paste buffers
@@ -133,38 +113,48 @@ bind -n M-n next-window
 set -sg escape-time 50 # No delay for escape key press
 set -sg repeat-time 300 # increase repeat timeout
 
-
-
 # Reload tmux config
 bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
 
-# tmux-prefix-highlight settings
-set -g @prefix_highlight_fg 'red'
-set -g @prefix_highlight_bg 'blue'
-set -g @prefix_highlight_show_copy_mode 'on'
-set -g @prefix_highlight_show_sync_mode 'on'
+#### COLOUR (base16-solarized)
 
-# tmux-sidebar settings
-set -g @sidebar-tree-command 'tree -L 2 -CF --noreport --dirsfirst'
-#set -g @sidebar-tree-position 'right'
-set -g @sidebar-tree 'e'
-set -g @sidebar-tree-focus 'w'
-set -g @sidebar-tree-width '20'
+# This theme is a 256 color variant and it uses the color codes of the
+# base16-solarized (256 color) terminal/shell theme:
+# https://github.com/chriskempson/base16
+# https://github.com/chriskempson/base16-shell
 
-# tmux-open settings
-# set -g @open-S 'https://www.google.com/'
-set -g @open 'o'
-set -g @open-editor 'C-e'
+# It is based on the original tmux-colors-solarized light theme with some color
+# codes changed (to map solarized base2, base00, orange, base1).
 
+# In fact, this theme may be used in combination with any base16 256 color
+# terminal/shell theme. But it will probably look a bit 'burnt' (i.e.
+# solarized).  It better matches the base16-solarized-light and
+# base16-solarized-dark terminal/shell color themes.
 
-# List of plugins
-set -g @plugin 'tmux-plugins/tmux-urlview'
-set -g @plugin 'tmux-plugins/tmux-cpu'
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-set -g @plugin 'tmux-plugins/tmux-sidebar'
-set -g @plugin 'tmux-plugins/tmux-open'
-set -g @plugin 'tmux-plugins/tmux-battery'
-set -g @plugin 'christoomey/vim-tmux-navigator'
+# default statusbar colors
+set-option -g status-style fg=yellow,bg=colour18 #yellow and base2
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+# default window title colors
+set-window-option -g window-status-style fg=colour20,bg=default #base00 and default
+#set-window-option -g window-status-style dim
+
+# active window title colors
+set-window-option -g window-status-current-style fg=colour16,bg=default #orange and default
+#set-window-option -g window-status-current-style bright
+
+# pane border
+set-option -g pane-border-style fg=colour18 #base2
+set-option -g pane-active-border-style fg=colour19 #base1
+
+# message text
+set-option -g message-style fg=colour16,bg=colour18 #orange and base2
+
+# pane number display
+set-option -g display-panes-active-colour blue #blue
+set-option -g display-panes-colour colour16 #orange
+
+# clock
+set-window-option -g clock-mode-colour green #green
+
+# bell
+set-window-option -g window-status-bell-style fg=colour18,bg=red #base2, red
