Added tmux-fzf-url to tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -16,6 +16,7 @@ set -g @copycat_search_C-t '(1Z ?[0-9A-Z]{3} ?[0-9A-Z]{3} ?[0-9A-Z]{2} ?[0-9A-Z]
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'wfxr/tmux-fzf-url'
 
 # Initialize TPM
 run '~/.tmux/plugins/tpm/tpm'
