Added gpg config for ssh keys

--- a/gnupg/gpg.conf
+++ b/gnupg/gpg.conf
@@ -5,7 +5,7 @@ no-greeting
 no-comments
 
 # Set the default secret key
-default-key 0x70B220FF8D2ACF29
+default-key 0xF30B951D85DBE1C0
 
 # Use the default key as the default recipient
 default-recipient-self
