--- a/ssh/config
+++ b/ssh/config
@@ -1,1 +1,6 @@
 Match host * exec "gpg-connect-agent UPDATESTARTUPTTY /bye"
+Host devenv
+    Hostname 74.207.233.21
+    IdentityFile ~/.ssh/id_ed25519_suse_nopw
+    IdentitiesOnly yes
+    User dnewman
