Made mpv better added i3 config

--- a/config/mpv/mpv.conf
+++ b/config/mpv/mpv.conf
@@ -127,8 +127,8 @@ volume=80                               # default volume, 100 = unchanged
 # profile=gpu-hq
 # deband=no
 # vo=gl:force-pbo
-vo=gpu,vx
-hwdec=vaapi
+# vo=gpu,vx
+# hwdec=vaapi
 
 
 # [high-quality]
