Updated tmux-sessionizer to point to projects folders

--- a/tmux.conf
+++ b/tmux.conf
@@ -340,6 +340,8 @@ set -g @sidebar-tree-command 'tree -C'
 
 set -g @open-S 'https://www.google.com/search?q='
 
+# forget the find window.  That is for chumps
+bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
 
 # ==============================================
 # ===   Nesting local and remote sessions     ===
