Added commands for scrolling with vim keys

--- a/tmux.conf
+++ b/tmux.conf
@@ -81,6 +81,10 @@ bind -r [ select-pane -t :.-
 bind -r ] select-pane -t :.+
 bind -r Tab last-window   # cycle thru MRU tabs
 bind -r C-o swap-pane -D
+bind -r h select-pane -L
+bind -r j select-pane -D
+bind -r k select-pane -U
+bind -r l select-pane -R
 
 
 # Zoom pane
@@ -149,10 +153,13 @@ bind C-p choose-buffer
 
 # trigger copy mode by
 bind -n M-Up copy-mode
+bind -n M-k  copy-mode
 
 # Scroll up/down by 1 line, half screen, whole screen
 bind -T copy-mode-vi M-Up              send-keys -X scroll-up
 bind -T copy-mode-vi M-Down            send-keys -X scroll-down
+bind -T copy-mode-vi M-k             send-keys -X scroll-up
+bind -T copy-mode-vi M-j            send-keys -X scroll-down
 bind -T copy-mode-vi M-PageUp          send-keys -X halfpage-up
 bind -T copy-mode-vi M-PageDown        send-keys -X halfpage-down
 bind -T copy-mode-vi PageDown          send-keys -X page-down
