--- a/ssh/config
+++ b/ssh/config
@@ -1,5 +1,7 @@
-AddKeysToAgent yes
-ForwardAgent yes
+Host *
+  AddKeysToAgent yes
+  ForwardAgent yes
+  IdentityFile ~/.ssh/id_ed25519_dlp
 
 Host windcharger
     Hostname 192.168.0.7
