Added kitty config

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -242,6 +242,6 @@ macos_option_as_alt no
 allow_remote_control yes
 
 # BEGIN_KITTY_THEME
-# Catppuccin-Latte
+# Catppuccin-Mocha
 include current-theme.conf
 # END_KITTY_THEME
