--- a/tag-linux-gui/config/mpv/mpv.conf
+++ b/tag-linux-gui/config/mpv/mpv.conf
@@ -3,7 +3,7 @@
 # Only uncomment one
 
 # Vulkan Linux
-# gpu-api=vulkan
+gpu-api=vulkan
 
 # Windows
 # gpu-api=d3d11
@@ -109,9 +109,9 @@ slang=en,eng
 
 
 # Video Profile
-# profile=high-quality
-# vo=gpu-next
-# hwdec=auto-copy
+profile=high-quality
+vo=gpu-next
+hwdec=auto-copy
 
 ###### Dither
 # dither-depth=auto
